# simple-rag-chatbot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: simple_rag_chatbot.py
