[tool.poetry]
package-mode = false
name = "simple-rag-chatbot"
version = "0.1.0"
description = ""
authors = ["Gadi Bessudo <gadi@aporia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chainlit = "^1.3.2"
langchain-community = "^0.3.9"
langchain-openai = "^0.2.11"
openai = "^1.56.2"
pydantic = "2.10.1"
pypdf = "^5.1.0"
faiss-cpu = "^1.9.0.post1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
